--- a/src/UserBundle/Resources/translations/FOSUserBundle.fr.yml
+++ b/src/UserBundle/Resources/translations/FOSUserBundle.fr.yml
@@ -1,6 +1,7 @@
 security:
     login:
-        username: "Nom d'utilisateur"
+        username: "Email"
         password: "Mot de passe"
         remember_me: Se souvenir de moi
         submit: Connexion
+"Bad credentials.": Nom d'utilisateur ou mot de passe incorrect.
