--- a/src/UserBundle/Resources/translations/messages.fr.yml
+++ b/src/UserBundle/Resources/translations/messages.fr.yml
@@ -1,3 +1,5 @@
+'Bad credentials': 'Identifiants incorrects'
+
 login:
     register:
         title: Pas encore inscrit ?
@@ -5,3 +7,31 @@ login:
             Bienvenue sur le site de Cheerup. Si tu n'es pas encore inscrit,
             clique sur le lien suivant et rejoins les autres membres Cheerup.
         link: Inscris toi !
+
+register:
+    title: Inscription
+    help:
+        cheerup_friend:
+            title: Ami de Cheer Up!
+            description: >
+                Les Amis de Cheer Up! font partie d'organisations dont
+                l'action est proche et complémentaire de celle de Cheer Up!
+                avec qui ils collaborent régulièrement.
+        network_volunteer:
+            title: Volontaire du réseau Cheer Up!
+            description: >
+                Les Volontaires du Réseau Cheer Up (VRC) sont des personnes
+                extérieures à l'association ayant proposé leur aide à Cheer Up!
+    field:
+        profile_type: Type de profil :
+    confirmed:
+        title: Inscription en attente de validation
+        message: >
+            Bonjour %username%, votre compte va maintenant être révisé par un
+            administrateur. Vous serez avertis par email lors de sa validation.
+
+user:
+    profile_type:
+        cheerup_friend: Ami de Cheer Up!
+        network_volunteer: Volontaire du réseau Cheer Up!
+        former_member: Ancien membre
