--- a/src/UserBundle/Resources/translations/messages.fr.yml
+++ b/src/UserBundle/Resources/translations/messages.fr.yml
@@ -24,14 +24,17 @@ register:
                 extérieures à l'association ayant proposé leur aide à Cheer Up!
     field:
         profile_type: Type de profil :
+        first_name: Prénom :
+        last_name: Nom :
     confirmed:
         title: Inscription en attente de validation
         message: >
             Bonjour %username%, votre compte va maintenant être révisé par un
             administrateur. Vous serez avertis par email lors de sa validation.
+    back_to_login: Revenir à l'accueil
 
 user:
     profile_type:
         cheerup_friend: Ami de Cheer Up!
         network_volunteer: Volontaire du réseau Cheer Up!
-        former_member: Ancien membre
+        former_member: Bénévole ou ancien
