Add confirmation email

--- a/src/UserBundle/Resources/translations/FOSUserBundle.fr.yml
+++ b/src/UserBundle/Resources/translations/FOSUserBundle.fr.yml
@@ -5,3 +5,14 @@ security:
         remember_me: Se souvenir de moi
         submit: Connexion
 "Bad credentials.": Nom d'utilisateur ou mot de passe incorrect.
+registration:
+    confirmed: Félicitations %fullname%, votre compte est maintenant activé.
+    email:
+        subject: Bienvenue %fullname% !
+        message: |
+            Bonjour %fullname% !
+
+            Pour valider votre compte utilisateur, merci de vous rendre sur %confirmationUrl%
+
+            Cordialement,
+            L'équipe.
