Add resetting mail

--- a/src/UserBundle/Resources/translations/FOSUserBundle.fr.yml
+++ b/src/UserBundle/Resources/translations/FOSUserBundle.fr.yml
@@ -6,13 +6,22 @@ security:
         submit: Connexion
 "Bad credentials.": Nom d'utilisateur ou mot de passe incorrect.
 registration:
-    confirmed: Félicitations %fullname%, votre compte est maintenant activé.
+    confirmed: Félicitations %fullname%, vous pouvez maintenant vous connecter.
     email:
         subject: Bienvenue %fullname% !
         message: |
             Bonjour %fullname% !
 
             Pour valider votre compte utilisateur, merci de vous rendre sur %confirmationUrl%
+
+            Cordialement,
+            L'équipe.
+resetting:
+    email:
+        message: |
+            Bonjour %fullname% !
+
+            Pour réinitialiser votre mot de passe, merci de vous rendre sur %confirmationUrl%
 
             Cordialement,
             L'équipe.
