--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -1,7 +1,7 @@
 base:
     title:
         default: Annuaire CheerUp
-homepage:
+home:
     hello: Bonjour %first_name%
     brand_name: Annuaire CheerUp!
     navbar:
