--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -17,17 +17,39 @@ profile:
             title: Informations générales
             submit: Sauvegarder
             fields:
-                first_year_contact: Première année de contact avec CheerUp!
-                address: Adresse ligne 1
-                additional_address_details: Adresse ligne 2
-                zip_code: Code postal
-                city: Ville
-                facebook_profile: Adresse du profil Facebook
-                twitter_profile: Adresse du profil Twitter
-                linked_in_profile: Adresse du profil LinkedIn
-                personal_website: Site personnel
-                phone_number: Numéro de téléphone fixe
-                cellphone_number: Numéro de téléphone portable
-            success: Modifications enregistrées !
+                first_year_contact:
+                    label: Première année de contact avec CheerUp!
+                    placeholder: Ex : "2004"
+                address:
+                    label: Adresse ligne 1
+                    placeholder: Ex : 37 rue de Chamboulis
+                additional_address_details:
+                    label: Adresse ligne 2
+                    placeholder: Ex : Bat A, porte 3
+                zip_code:
+                    label: Code postal
+                    placeholder: Ex : 75017
+                city:
+                    label: Ville
+                    placeholder: Ex : Paris
+                facebook_profile:
+                    label: Adresse du profil Facebook
+                    placeholder: Ex : https://www.facebook.com/prenom.nom
+                twitter_profile:
+                    label: Adresse du profil Twitter
+                    placeholder: Ex : https://twitter.com/PrenomNom
+                linked_in_profile:
+                    label: Adresse du profil LinkedIn
+                    placeholder: Ex : https://fr.linkedin.com/in/prenomnom
+                personal_website:
+                    label: Site personnel
+                    placeholder: Ex : https://www.monsiteperso.com
+                phone_number:
+                    label: Numéro de téléphone fixe
+                    placeholder: Ex : 01 XX XX XX XX
+                cellphone_number:
+                    label: Numéro de téléphone portable
+                    placeholder: Ex : 06 XX XX XX XX
+            success: Modifications enregistrées avec succès !
     view:
         title: Profil de %fullname%
