--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -15,6 +15,8 @@ profile:
         title: Mon profil
         user_profile:
             title: Informations générales
+            coordinates: Coordonnées
+            social_networks: Réseaux sociaux
             submit: Sauvegarder
             fields:
                 first_year_contact:
@@ -54,7 +56,6 @@ profile:
         profile_picture:
             title: Photo de profil
             choose_file: Choisir une photo
-            submit: Uploader
             success: Photo mise à jour avec succès !
 
     view:
