Add translations for default login error messages

--- a/src/UserBundle/Resources/translations/FOSUserBundle.fr.yml
+++ b/src/UserBundle/Resources/translations/FOSUserBundle.fr.yml
@@ -5,6 +5,9 @@ security:
         remember_me: Se souvenir de moi
         submit: Connexion
 "Bad credentials.": Nom d'utilisateur ou mot de passe incorrect.
+"User account is disabled.": Ce compte n'est pas activé.
+"User account is locked.": Ce compte est verrouillé.
+"User account has expired.": Ce compte a expiré.
 registration:
     confirmed: Félicitations %fullname%, vous pouvez maintenant vous connecter.
     email:
