--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -105,3 +105,14 @@ admin:
                     offshoot: Type de groupe
                     is_not_offshoot: Équipe fédérale
                     is_offshoot: Antenne Cheerup
+        user_validation:
+            title: Validation des nouveaux utilisateurs
+            submit: Valider
+            success.sing: %nb_of_users% utilisateur a été validé avec succès
+            success.plural: %nb_of_users% utilisateurs ont été validés avec succès
+            empty: Il n'y a pas de nouveaux utilisateurs en attente de validation
+            field:
+                firstname: Prénom
+                lastname: Nom
+                profile_type: Type de profil
+                offshoot_of_origin: Antenne d'origine
