--- a/src/UserBundle/Resources/translations/validators.fr.yml
+++ b/src/UserBundle/Resources/translations/validators.fr.yml
@@ -1,3 +1,3 @@
 registration:
     profile_type:
-        not_valid: Choisissez un type d'utilisateur valide
+        not_valid: "Choisissez un type d'utilisateur valide"
